Fixed some issues with the hero grid and font on tablet

--- a/art-gallery-website/starter-code/index.css
+++ b/art-gallery-website/starter-code/index.css
@@ -414,13 +414,20 @@ select {
 @media screen and (min-width:700px){
     .hero-section{
         display: grid;
-        grid-template-columns: 48% 5% 100%;
+        grid-template-columns: 1fr .14fr 1fr;
+        grid-template-rows: 1;
         width: 100%;
     }
 
     .hero-image {
         grid-column: 1 / 3;
         grid-row: 1;
+        height: 100%;
+    }
+
+    .hero-image img {
+        height: 100%;
+        content: url('assets/tablet/image-hero@2x.jpg');
     }
 
     .hero-content {
@@ -437,7 +444,6 @@ select {
     .hero-content h1 {
         font-size: var(--fs-600);
         padding-bottom: .8em;
-        -webkit-text-stroke: 2px black;
     }
 
     .hero-content p {
@@ -484,6 +490,7 @@ select {
         grid-column: 1/3;
         color: white;
         mix-blend-mode:saturation;
+        -webkit-text-stroke: 2px black;
     }
 
     .hero-content-text {
